--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
 ### STS (eclipse) ###
 .apt_generated
 .classpath
