--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=my-save
+server.servlet.context-path=/mysave/api
 spring.mvc.log-request-details = true
 spring.devtools.restart.log-condition-evaluation-delta=true
 
@@ -6,10 +8,19 @@ spring.devtools.restart.log-condition-evaluation-delta=true
 spring.banner.location= banner.txt
 server.port=8085
 
+#H2
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# H2 connection
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.url = jdbc:postgres://dpg-cn8d0ra1hbls73da4n30-a.ohio-postgres.render.com/renderpsql_jnme
 #spring.datasource.username=root
